--- a/chatbot_api/Dockerfile
+++ b/chatbot_api/Dockerfile
@@ -16,7 +16,7 @@ RUN pip install --no-cache-dir -r requirements.txt
 EXPOSE 5000
 
 # Define environment variable
-ENV FLASK_APP=app.py
+ENV FLASK_APP=api.py
 
 # Run app.py when the container launches
 CMD ["flask", "run", "--host=0.0.0.0"]
