--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -19,8 +19,8 @@ services:
     env_file:
       - .env
     image: chatbot_interface:latest
-    volumes:
-      - ./chatbot_interface/src/Chatbot.js:/app/src/Chatbot.js:rw
+    # volumes:
+    #   - ./chatbot_interface/src/Chatbot.js:/app/src/Chatbot.js:rw
     depends_on:
       - chatbot_api
     networks:
@@ -43,9 +43,9 @@ services:
     ports:
       - ${CHATBOT_API_PORT}:5000
     image: chatbot_api:latest
-    volumes:
-      - ./chatbot_api/app.py:/app/app.py:rw
-      - ./chatbot_api/chatbot.py:/app/chatbot.py:rw
+    # volumes:
+    #   - ./chatbot_api/api.py:/app/api.py:rw
+    #   - ./chatbot_api/chatbot.py:/app/chatbot.py:rw
     networks:
       goal_parser_network:
         ipv4_address: ${CHATBOT_API_IP}
